--- a/app/templates/app/home.html
+++ b/app/templates/app/home.html
@@ -29,7 +29,11 @@
                 <div class="col ">
                     <div class="card mt-4 mx-5 w-75">
                         <a href="{% url 'post' post_id=post.id %}">
-                            <img src="{% static 'app/image/logo.jpg' %}" alt="Your Picture" class="card-img-top img-fluid">
+                            {% if post.pic_url %}
+                            <img src="{{ post.pic_url }}" alt="{{ post.caption }}" class="card-img-top img-fluid">
+                            {% else %}
+                            <img src="{% static 'app/image/logo.jpg' %}" alt="{{ post.caption }}" class="card-img-top img-fluid">
+                            {% endif %}
                         </a>
                         <div class="card-body">
                             <a class="text-decoration-none" href="{% url 'post' post_id=post.id %}">
@@ -37,7 +41,7 @@
                             </a>
                             <p class="card-text lh-sm">Company Name: {{ post.employer.company_name }}</p>
                             <p class="card-text lh-sm">City: {{ post.address }}</p>
-                            <p class="card-text lh-sm">Field: {{ post.job }}</p>
+                            <p class="card-text lh-sm">Field: {{ post.field }}</p>
                             <p class="card-text lh-sm">Salary: {{ post.salary }}</p>
                             <p class="card-text lh-sm">Working hours: {{ post.hour }}</p>
                             <p class="card-text lh-sm">
