post view done,update (read des)
prev des:
1.in post can show employer post information but not company_name yet, contact
2.model.py add atribute to class post to save employer introduction, field, fix picture url to not require (more in forms.py)
3.forms.py in PostForm pic_url not required, in class meta fields add field to save field during create post in publish.html  and to display field (can be viewd) in home.html
4.view.py: add in def publish: save employer introduction, city. No contact or company_name yet
5. home.html show pic  but if no pic show stored pic

NOW:
1. From home can: view post contain summary of a job: comp name, field,...
2. In a post can view detail of the job including comp name, contact (can be stored),...(other are mentions above in prev des)
3.class post in models.py have comp name and contact
4.forms.py: add contact (not required+ in fields)
5.view.py def publish save comp name

--- a/app/templates/app/home.html
+++ b/app/templates/app/home.html
@@ -40,7 +40,7 @@
                                 <h5 class="card-title">{{ post.caption }}</h5>
                             </a>
                             <p class="card-text lh-sm">Company Name: {{ post.employer.company_name }}</p>
-                            <p class="card-text lh-sm">City: {{ post.address }}</p>
+                            <p class="card-text lh-sm">City: {{ post.city}}</p>
                             <p class="card-text lh-sm">Field: {{ post.field }}</p>
                             <p class="card-text lh-sm">Salary: {{ post.salary }}</p>
                             <p class="card-text lh-sm">Working hours: {{ post.hour }}</p>
