--- a/app/templates/app/post/publish.html
+++ b/app/templates/app/post/publish.html
@@ -61,6 +61,15 @@
                                         <div class="d-flex flex-row align-items-center mb-4">
                                             <i class="fas fa-key fa-lg me-3 fa-fw"></i>
                                             <div class="form-outline flex-fill mb-0">
+                                                <label for="inputcontact" class="form-label">Contact:</label>
+                                                {% comment %} <input class="form-control" type="text" id="inputcontact" placeholder="000.xxx/floor" name="Contact" value="{{ form.contact }}" required> {% endcomment %}
+                                                {{ form.contact }}
+                                            </div>
+                                        </div>
+
+                                        <div class="d-flex flex-row align-items-center mb-4">
+                                            <i class="fas fa-key fa-lg me-3 fa-fw"></i>
+                                            <div class="form-outline flex-fill mb-0">
                                                 <label for="inputAddress" class="form-label">Address</label>
                                                 {% comment %} <input class="form-control" type="text" id="inputAddress" placeholder="1234 Main St" name="addr" value="{{ form.address }}" required> {% endcomment %}
                                                 {{ form.address }}
