--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -91,9 +91,9 @@
 
                 <form class="d-flex" role="search">
                   <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                  <button class="btn btn-outline-success" type="submit">
+                  <a class="btn btn-outline-success" type="submit" href="{% url 'search' %}">
                     <i class="bi bi-search"></i>
-                  </button>
+                  </a>
                 </form>
               </div>
               
