--- a/app/templates/app/post/post.html
+++ b/app/templates/app/post/post.html
@@ -88,7 +88,7 @@
                                             <label for="inputCity" class="form-label">City: </label>
                                         </div>
                                         <div class="w-50">
-                                            <input class="form-control border-0" type="text"  id="inputCity" readonly placeholder="{{ post.city }}" name="city here" >
+                                            <input class="form-control border-0" type="text"  id="inputCity" readonly value="{{ post.city }}" name="city here" >
                                         </div>
                                     </div>
                   
