User has specified profile URL but base and profile has the same user (cannot resolve)

--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -107,7 +107,7 @@
                   <ul class="dropdown-menu">
                     <li>
                       <!--Tinh la 3 profile cua admin cua jf va cua e-->
-                      <a class="dropdown-item" href="{% url 'profileA' %}">
+                      <a class="dropdown-item" href="{% url 'profile' username=user.username %}">
                         <i class="bi bi-person-circle" > </i>
                         Profile
                       </a>  
