--- a/app/templates/app/search.html
+++ b/app/templates/app/search.html
@@ -17,7 +17,7 @@
         <h5 class=" mx-5 mt-5">Search for "ABC". Found 3 results :</h5>
         <div class="container mb-5">
             <span class="caption"> Sort by : </span> 
-            <div class="mx-3 form-check form-check-inline"> <!--Search theo keyword-->
+            <div class="mx-3 form-check form-check-inline"> <!--Search theo keyword--> <!--Search này là search default-->
                 <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1" value = "option1" checked>
                 <label class="form-check-label" for="flexRadioDefault1">
                   Relevancy
@@ -28,7 +28,10 @@
                 <label class="form-check-label" for="flexRadioDefault1">
                   Post Date
                 </label>
-            </div>     
+            </div>    
+            <div class="form-check-inline mx-5"> <!--Nút apply dùng để apply 1 trong 2 loại search trên-->
+                <button type="button" class="btn btn-success btn-sm" >Apply</button>
+            </div>
         </div>
 
         <!--Đoạn này copy từ home.html (dòng 26 đến 93 bên home.html) (có mấy cái hiện post với pagination)-->
