--- a/app/templates/app/home.html
+++ b/app/templates/app/home.html
@@ -28,28 +28,61 @@
                 {% for post in posts %}
                 <div class="col ">
                     <div class="card mt-4 mx-5 w-75">
-                        <a href="{% url 'post' post_id=post.id %}">
-                            {% if post.pic_url %}
-                            <img src="{{ post.pic_url }}" alt="{{ post.caption }}" class="card-img-top img-fluid">
-                            {% else %}
-                            <img src="{% static 'app/image/logo.jpg' %}" alt="{{ post.caption }}" class="card-img-top img-fluid">
+                        {% if post.is_hidden %}
+                            {% if user == post.employer.user %}
+                                <div class="card-header">
+                                    <strong>Hidden Post</strong>
+                                    <a href="{% url 'post' post_id=post.id %}">
+                                        {% if post.pic_url %}
+                                        <img src="{{ post.pic_url }}" alt="{{ post.caption }}" class="card-img-top img-fluid">
+                                        {% else %}
+                                        <img src="{% static 'app/image/logo.jpg' %}" alt="{{ post.caption }}" class="card-img-top img-fluid">
+                                        {% endif %}
+                                    </a>
+                                    <div class="card-body">
+                                        <a class="text-decoration-none" href="{% url 'post' post_id=post.id %}">
+                                            <h5 class="card-title">{{ post.caption }}</h5>
+                                        </a>
+                                        <p class="card-text lh-sm">Company Name: {{ post.employer.company_name }}</p>
+                                        <p class="card-text lh-sm">City: {{ post.city}}</p>
+                                        <p class="card-text lh-sm">Field: {{ post.field }}</p>
+                                        <p class="card-text lh-sm">Salary: {{ post.salary }}</p>
+                                        <p class="card-text lh-sm">Working hours: {{ post.hour }}</p>
+                                        <p class="card-text lh-sm">
+                                            <small class="text-body-secondary">Posted {{ post.created_at|timesince }} ago by</small>
+                                            <a href="#" class="text-decoration-none">{{ post.employer.user.username }}</a>
+                                        </p>
+            
+                                    </div>
+                                </div>
                             {% endif %}
-                        </a>
-                        <div class="card-body">
-                            <a class="text-decoration-none" href="{% url 'post' post_id=post.id %}">
-                                <h5 class="card-title">{{ post.caption }}</h5>
+                        {% else %}
+                            <div class="card-header">
+                                <strong>Post</strong>
+                            </div>
+                            <a href="{% url 'post' post_id=post.id %}">
+                                {% if post.pic_url %}
+                                <img src="{{ post.pic_url }}" alt="{{ post.caption }}" class="card-img-top img-fluid">
+                                {% else %}
+                                <img src="{% static 'app/image/logo.jpg' %}" alt="{{ post.caption }}" class="card-img-top img-fluid">
+                                {% endif %}
                             </a>
-                            <p class="card-text lh-sm">Company Name: {{ post.employer.company_name }}</p>
-                            <p class="card-text lh-sm">City: {{ post.city}}</p>
-                            <p class="card-text lh-sm">Field: {{ post.field }}</p>
-                            <p class="card-text lh-sm">Salary: {{ post.salary }}</p>
-                            <p class="card-text lh-sm">Working hours: {{ post.hour }}</p>
-                            <p class="card-text lh-sm">
-                                <small class="text-body-secondary">Posted {{ post.created_at|timesince }} ago by</small>
-                                <a href="#" class="text-decoration-none">{{ post.employer.user.username }}</a>
-                            </p>
+                            <div class="card-body">
+                                <a class="text-decoration-none" href="{% url 'post' post_id=post.id %}">
+                                    <h5 class="card-title">{{ post.caption }}</h5>
+                                </a>
+                                <p class="card-text lh-sm">Company Name: {{ post.employer.company_name }}</p>
+                                <p class="card-text lh-sm">City: {{ post.city}}</p>
+                                <p class="card-text lh-sm">Field: {{ post.field }}</p>
+                                <p class="card-text lh-sm">Salary: {{ post.salary }}</p>
+                                <p class="card-text lh-sm">Working hours: {{ post.hour }}</p>
+                                <p class="card-text lh-sm">
+                                    <small class="text-body-secondary">Posted {{ post.created_at|timesince }} ago by</small>
+                                    <a href="{% url 'profile' username=post.employer.user.username %}" class="text-decoration-none">{{ post.employer.user.username }}</a>
+                                </p>
 
-                        </div>
+                            </div>
+                        {% endif %}
                     </div>
                 </div>
                 {% endfor %}
