--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -89,11 +89,12 @@
 
                 </ul>
 
-                <form class="d-flex" role="search">
-                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                  <a class="btn btn-outline-success" type="submit" href="{% url 'search' %}">
+                <form class="d-flex"  action='{% url 'search' %}'>
+                  {% csrf_token %}
+                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name = 'searched'>
+                  <button class="btn btn-outline-success" type="submit" >
                     <i class="bi bi-search"></i>
-                  </a>
+                  </button>
                 </form>
               </div>
               
