--- a/app/templates/app/search.html
+++ b/app/templates/app/search.html
@@ -14,7 +14,7 @@
     </head>
     <body>
         <!--Search header-->
-        <h5 class=" mx-5 mt-5">Search for "ABC". Found 3 results :</h5>
+        <h5 class=" mx-5 mt-5">Searched for "{{ searched }}". Found {{count}} results :</h5>
         <div class="container mb-5">
             <span class="caption"> Sort by : </span> 
             <div class="mx-3 form-check form-check-inline"> <!--Search theo keyword--> <!--Search này là search default-->
@@ -67,7 +67,6 @@
                 {% endfor %}
             </div>
         </div>
-        
         
         <div class="row justify-content-center mt-5">
         <nav aria-label="Page navigation example">
