--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -88,10 +88,8 @@
                   </li>
 
                 </ul>
-
-                <form class="d-flex"  action='{% url 'search' %}'>
-                  {% csrf_token %}
-                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name = 'searched'>
+                <form class="d-flex" action="{% url 'search' %}">
+                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" value='{{searched}}' name = 'searched'>
                   <button class="btn btn-outline-success" type="submit" >
                     <i class="bi bi-search"></i>
                   </button>
