--- a/app/templates/app/search.html
+++ b/app/templates/app/search.html
@@ -1,5 +1,7 @@
 {% extends 'app/base.html'%}
 {% load static %}
+{% load pagination_tags %}
+
 
 {% block main-content %}
 <!DOCTYPE html>
@@ -15,24 +17,41 @@
     <body>
         <!--Search header-->
         <h5 class=" mx-5 mt-5">Searched for "{{ searched }}". Found {{count}} results :</h5>
-        <div class="container mb-5">
+        <form action ="?{{request.GET|urlencode}}&flexRadioDefault={{ request.GET.flexRadioDefault }}&searched={{ request.GET.searched }}&page={{ posts.number }}" method=GET>
+        <div class="text-center fw-bold">
+            {% if messages %}
+              {% for message in messages %}
+                    {{ message }}
+              {% endfor %}
+            {% endif %}
+          </div>
+        <div class="container mb-5" >
             <span class="caption"> Sort by : </span> 
             <div class="mx-3 form-check form-check-inline"> <!--Search theo keyword--> <!--Search này là search default-->
+                {%if check %}
+                <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1" value = "option1">
+                {%else%}
                 <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1" value = "option1" checked>
+                {%endif%}
                 <label class="form-check-label" for="flexRadioDefault1">
                   Relevancy
                 </label>
             </div>
             <div class="form-check form-check-inline"> <!--Search theo thời gian (ngày đăng)-->
+                {%if check%}
+                <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1" value = "option2" checked>
+                {%else%}
                 <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1" value = "option2">
+                {%endif%}
                 <label class="form-check-label" for="flexRadioDefault1">
                   Post Date
                 </label>
             </div>    
             <div class="form-check-inline mx-5"> <!--Nút apply dùng để apply 1 trong 2 loại search trên-->
-                <button type="button" class="btn btn-success btn-sm" >Apply</button>
+                <button type="submit" class="btn btn-success btn-sm" >Apply</button>
             </div>
         </div>
+    </form>
 
         <!--Đoạn này copy từ home.html (dòng 26 đến 93 bên home.html) (có mấy cái hiện post với pagination)-->
         <div class="container mt-5">
@@ -73,10 +92,10 @@
             <ul class="pagination justify-content-center">
             {% if posts.has_previous %} 
               <li class="page-item">
-                <a class="page-link" href="?page=1">&laquo </a>
+                <a class="page-link" href="?{% url_replace page=1 searched=searched flexRadioDefault=action %}">&laquo </a>
               </li>
               <li class="page-item">
-                <a class="page-link" href="?page={{posts.previous_page_number}}">Previous</a>
+                <a class="page-link" href="?{% url_replace page=posts.previous_page_number searched=searched flexRadioDefault=action %}">Previous</a>
               </li>
             {%endif%}
             {% if posts.paginator.num_pages > 10%}
@@ -85,18 +104,18 @@
             {%else%}
              {%for i in nums%}
                 {%if forloop.counter == posts.number%}
-                    <li class="page-item active"><a class="page-link" href="?page={{posts.number}}">{{posts.number}}</a></li>
+                    <li class="page-item active"><a class="page-link" href="?{% url_replace page=posts.number searched=searched flexRadioDefault=action%}">{{posts.number}}</a></li>
                 {%else%}
-                    <li class="page-item"><a class="page-link" href="?page={{forloop.counter}}">{{forloop.counter}}</a></li>
+                    <li class="page-item"><a class="page-link" href="?{% url_replace page=forloop.counter searched=searched flexRadioDefault=action%}">{{forloop.counter}}</a></li>
                 {%endif%}
              {%endfor%}
             {%endif%}
              {% if posts.has_next %}
               <li class="page-item">
-                <a class="page-link" href="?page={{posts.next_page_number}}">Next</a>
+                <a class="page-link" href="?{% url_replace page=posts.next_page_number searched=searched flexRadioDefault=action%}">Next</a>
               </li>
               <li class="page-item">
-                <a class="page-link" href="?page={{posts.paginator.num_pages}}">&raquo </a>
+                <a class="page-link" href="?{% url_replace page=posts.paginator.num_pages searched=searched flexRadioDefault=action%}">&raquo </a>
               </li>
             {%endif%}
             </ul>
