--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -90,6 +90,8 @@
                 </ul>
                 <form class="d-flex" action="{% url 'search' %}">
                   <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" value='{{searched}}' name = 'searched'>
+                  <input type="hidden" name="page" value="1">
+                  <input type="hidden" name="sort" value="relevancy">
                   <button class="btn btn-outline-success" type="submit" >
                     <i class="bi bi-search"></i>
                   </button>
