--- a/app/templates/app/search.html
+++ b/app/templates/app/search.html
@@ -17,38 +17,40 @@
     <body>
         <!--Search header-->
         <h5 class=" mx-5 mt-5">Searched for "{{ searched }}". Found {{count}} results :</h5>
-        <form action ="?{{request.GET|urlencode}}&flexRadioDefault={{ request.GET.flexRadioDefault }}&searched={{ request.GET.searched }}&page={{ posts.number }}" method=GET>
-        <div class="text-center fw-bold">
+    <form action ="" >
+      <div class="text-center fw-bold">
             {% if messages %}
               {% for message in messages %}
                     {{ message }}
               {% endfor %}
             {% endif %}
           </div>
+        <input type="hidden" name="searched" value="{{ searched }}">
+        <input type="hidden" name="page" value="{{ posts.number }}">
         <div class="container mb-5" >
             <span class="caption"> Sort by : </span> 
             <div class="mx-3 form-check form-check-inline"> <!--Search theo keyword--> <!--Search này là search default-->
                 {%if check %}
-                <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1" value = "option1">
+                <input class="form-check-input" type="radio" name="sort" id="sort1" value = "relevancy">
                 {%else%}
-                <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1" value = "option1" checked>
+                <input class="form-check-input" type="radio" name="sort" id="sort1" value = "relevancy" checked>
                 {%endif%}
-                <label class="form-check-label" for="flexRadioDefault1">
+                <label class="form-check-label" for="sort1">
                   Relevancy
                 </label>
             </div>
             <div class="form-check form-check-inline"> <!--Search theo thời gian (ngày đăng)-->
                 {%if check%}
-                <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1" value = "option2" checked>
+                <input class="form-check-input" type="radio" name="sort" id="sort1" value = "postdate" checked>
                 {%else%}
-                <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1" value = "option2">
+                <input class="form-check-input" type="radio" name="sort" id="sort1" value = "postdate">
                 {%endif%}
-                <label class="form-check-label" for="flexRadioDefault1">
+                <label class="form-check-label" for="sort1">
                   Post Date
                 </label>
-            </div>    
+            </div>   
             <div class="form-check-inline mx-5"> <!--Nút apply dùng để apply 1 trong 2 loại search trên-->
-                <button type="submit" class="btn btn-success btn-sm" >Apply</button>
+                <button type="submit" class="btn btn-success btn-sm" name = 'apply' value ='applied'>Apply </button>
             </div>
         </div>
     </form>
@@ -92,10 +94,10 @@
             <ul class="pagination justify-content-center">
             {% if posts.has_previous %} 
               <li class="page-item">
-                <a class="page-link" href="?{% url_replace page=1 searched=searched flexRadioDefault=action %}">&laquo </a>
+                <a class="page-link" href="?{% url_replace page=1 searched=searched sort=sort apply=''%}">&laquo </a>
               </li>
               <li class="page-item">
-                <a class="page-link" href="?{% url_replace page=posts.previous_page_number searched=searched flexRadioDefault=action %}">Previous</a>
+                <a class="page-link" href="?{% url_replace page=posts.previous_page_number searched=searched sort=sort apply=''%}">Previous</a>
               </li>
             {%endif%}
             {% if posts.paginator.num_pages > 10%}
@@ -104,18 +106,18 @@
             {%else%}
              {%for i in nums%}
                 {%if forloop.counter == posts.number%}
-                    <li class="page-item active"><a class="page-link" href="?{% url_replace page=posts.number searched=searched flexRadioDefault=action%}">{{posts.number}}</a></li>
+                    <li class="page-item active"><a class="page-link" href="?{% url_replace page=posts.number searched=searched sort=sort apply=''%}">{{posts.number}}</a></li>
                 {%else%}
-                    <li class="page-item"><a class="page-link" href="?{% url_replace page=forloop.counter searched=searched flexRadioDefault=action%}">{{forloop.counter}}</a></li>
+                    <li class="page-item"><a class="page-link" href="?{% url_replace page=forloop.counter searched=searched sort=sort apply=''%}">{{forloop.counter}}</a></li>
                 {%endif%}
              {%endfor%}
             {%endif%}
              {% if posts.has_next %}
               <li class="page-item">
-                <a class="page-link" href="?{% url_replace page=posts.next_page_number searched=searched flexRadioDefault=action%}">Next</a>
+                <a class="page-link" href="?{% url_replace page=posts.next_page_number searched=searched sort=sort apply=''%}">Next</a>
               </li>
               <li class="page-item">
-                <a class="page-link" href="?{% url_replace page=posts.paginator.num_pages searched=searched flexRadioDefault=action%}">&raquo </a>
+                <a class="page-link" href="?{% url_replace page=posts.paginator.num_pages searched=searched sort=sort apply=''%}">&raquo </a>
               </li>
             {%endif%}
             </ul>
