--- a/app/templates/app/post/publish.html
+++ b/app/templates/app/post/publish.html
@@ -37,7 +37,7 @@
                                             {% endfor %}
                                         {% endif %}
                                     </div>
-                                    <form class="mx-1 mx-md-4" method="POST" action="">
+                                    <form class="mx-1 mx-md-4" method="POST" action="" enctype="multipart/form-data">
                                         {% csrf_token %}
 
                                         <div class="d-flex flex-row align-items-center mb-4">
@@ -76,7 +76,7 @@
                                             </div>
                                         </div>
 
-                                        <div class="d-flex flex-row align-items-center mb-4">
+                                        {% comment %} <div class="d-flex flex-row align-items-center mb-4">
                                             <i class="fas fa-user fa-lg me-3 fa-fw"></i>
                                             <div class="form-outline flex-fill mb-0">
                                                 <label for="inputField" class="form-label">Field :</label>
@@ -99,7 +99,7 @@
                                                     <option value="Finacial Investment"{% if post.field == 'Finacial Investment' %}selected{% endif %}>Finacial Investment</option>
                                                 </select>
                                             </div>
-                                        </div>
+                                        </div> {% endcomment %}
 
                                         <div class="d-flex flex-row align-items-center mb-4">
                                             <i class="fas fa-key fa-lg me-3 fa-fw"></i>
