--- a/app/templates/app/post/publish.html
+++ b/app/templates/app/post/publish.html
@@ -100,6 +100,15 @@
                                                 </select>
                                             </div>
                                         </div> {% endcomment %}
+                                        
+                                        <div class="d-flex flex-row align-items-center mb-4">
+                                            <i class="fas fa-key fa-lg me-3 fa-fw"></i>
+                                            <div class="form-outline flex-fill mb-0">
+                                                <label for="inputJob" class="form-label">Field</label>
+                                                {% comment %} <input class="form-control" type="text" id="inputJob" placeholder="Job title" name="job"  value="{{ form.job }}" required> {% endcomment %}
+                                                {{ form.field }}
+                                            </div>
+                                        </div>
 
                                         <div class="d-flex flex-row align-items-center mb-4">
                                             <i class="fas fa-key fa-lg me-3 fa-fw"></i>
