--- a/app/templates/app/home.html
+++ b/app/templates/app/home.html
@@ -34,7 +34,7 @@
                                     <strong>Hidden Post</strong>
                                     <a href="{% url 'post' post_id=post.id %}">
                                         {% if post.pic_url %}
-                                        <img src="{{ post.pic_url }}" alt="{{ post.caption }}" class="card-img-top img-fluid">
+                                        <img src="{{ post.pic_url.url }}" alt="{{ post.caption }}" class="card-img-top img-fluid">
                                         {% else %}
                                         <img src="{% static 'app/image/logo.jpg' %}" alt="{{ post.caption }}" class="card-img-top img-fluid">
                                         {% endif %}
@@ -62,7 +62,7 @@
                             </div>
                             <a href="{% url 'post' post_id=post.id %}">
                                 {% if post.pic_url %}
-                                <img src="{{ post.pic_url }}" alt="{{ post.caption }}" class="card-img-top img-fluid">
+                                <img src="{{ post.pic_url.url }}" alt="{{ post.caption }}" class="card-img-top img-fluid">
                                 {% else %}
                                 <img src="{% static 'app/image/logo.jpg' %}" alt="{{ post.caption }}" class="card-img-top img-fluid">
                                 {% endif %}
