--- a/app/templates/app/post/post.html
+++ b/app/templates/app/post/post.html
@@ -241,15 +241,30 @@
     
     {% for comment in comments %}
         <div class="card mt-4">
-            <div class="card-body">
-                <div class="d-flex justify-content-between align-items-center">
-                    <div>
-                        <h6 class="mb-0"><strong>{{ comment.user.username }}</strong></h6>
-                        <small class="text-muted">{{ comment.created_at|timesince }} ago</small>
-                    </div>
-                </div>
-                <hr>
+            <div class="comment">
+                <p>
+                    <strong><a href="{% url 'profile' username=comment.user.username %}">{{ comment.user.username }}</a></strong>
+                    - {{ comment.created_at|timesince }} ago
+                </p>
                 <p>{{ comment.content }}</p>
+                <div class="d-flex">
+                    <form method="POST" action="{% url 'post' post.id %}">
+                        {% csrf_token %}
+                        <input type="hidden" name="action" value="like_comment">
+                        <input type="hidden" name="comment_id" value="{{ comment.id }}">
+                        <button type="submit" class="btn btn-primary btn-sm me-2">
+                            <i class="bi bi-hand-thumbs-up-fill "></i>({% if comment.likes.count %}{{ comment.likes.count }}{% else %}0{% endif %})
+                        </button>
+                    </form>
+                    <form method="POST" action="{% url 'post' post.id %}">
+                        {% csrf_token %}
+                        <input type="hidden" name="action" value="dislike_comment">
+                        <input type="hidden" name="comment_id" value="{{ comment.id }}">
+                        <button type="submit" class="btn btn-danger btn-sm me-2">
+                            <i class="bi bi-hand-thumbs-down-fill "></i> ({% if comment.dislikes.count %}{{ comment.dislikes.count }}{% else %}0{% endif %})
+                        </button>
+                    </form>
+                </div>
             </div>
         </div>
     {% endfor %}
