--- a/app/templates/app/post/publish.html
+++ b/app/templates/app/post/publish.html
@@ -43,7 +43,8 @@
                                         <div class="d-flex flex-row align-items-center mb-4">
                                             <i class="fas fa-key fa-lg me-3 fa-fw"></i>
                                             <div class="form-outline flex-fill mb-0">
-                                                <label for="inputPicURL" class="form-label">Picture (URL):</label>
+                                                <label class="form-label">For best quality and performance, please upload 500px x 500px image</label>
+                                                <label for="inputPicURL" class="form-label">Picture :</label>
                                                 {% comment %} <input class="form-control" type="text" id="inputPicURL" name="PicURL" value="{{ form.pic_url }}"> {% endcomment %}
                                                 {{ form.pic_url }}
                                             </div>
